Link product cards to detail pages

--- a/index.html
+++ b/index.html
@@ -1,90 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Soumis Gems - Discover Elegance</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <!-- Navigation -->
     <nav class="navbar">
-        <div class="nav-container">
-            <div class="logo">SOUMIS GEMS</div>
-            <ul class="nav-menu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#earrings">Earrings</a></li>
-                <li><a href="#collections">Collections</a></li>
-                <li><a href="#wholesale">Wholesale Pricing</a></li>
-            </ul>
-            <div class="nav-icons">
-                <a href="#search">🔍</a>
-                <a href="#account">👤</a>
-                <a href="#cart">🛒</a>
-            </div>
+      <div class="nav-container">
+        <div class="logo">SOUMIS COLLECTIONS</div>
+        <ul class="nav-menu">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#products">Products</a></li>
+          <li><a href="#earrings">Earrings</a></li>
+          <li><a href="#collections">Collections</a></li>
+          <li><a href="#wholesale">Wholesale Pricing</a></li>
+        </ul>
+        <div class="nav-icons">
+          <a href="#search" aria-label="Search">
+            <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
+              <path
+                d="M15.5 14h-.79l-.28-.27a6 6 0 1 0-.71.71l.27.28v.79l5 5 1.5-1.5-5-5zm-5.5 0a4 4 0 1 1 0-8 4 4 0 0 1 0 8z"
+              />
+            </svg>
+          </a>
+          <a href="#account" aria-label="Account">
+            <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
+              <path
+                d="M12 12a5 5 0 1 0-5-5 5 5 0 0 0 5 5zm0 2c-4.42 0-8 2.24-8 5v1h16v-1c0-2.76-3.58-5-8-5z"
+              />
+            </svg>
+          </a>
+          <a href="#cart" aria-label="Cart">
+            <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
+              <path
+                d="M7 4h-2l-1 2v2h2l3.6 7.59-1.35 2.45A1 1 0 0 0 9.2 19h11v-2H10l.1-.18L11.55 14h7.9a1 1 0 0 0 .95-.68l2.5-7.32A1 1 0 0 0 21 4H7zm2 16a2 2 0 1 0 2 2 2 2 0 0 0-2-2zm10 0a2 2 0 1 0 2 2 2 2 0 0 0-2-2z"
+              />
+            </svg>
+          </a>
         </div>
+      </div>
     </nav>
     <!-- Hero Section -->
     <section class="hero">
-        <div class="hero-content">
-            <h1>DISCOVER ELEGANCE</h1>
-            <div class="hero-buttons">
-                <button class="btn btn-primary">SHOP RETAIL</button>
-                <button class="btn btn-secondary">EXPLORE WHOLESALE</button>
-            </div>
+      <div class="hero-content">
+        <h1>DISCOVER ELEGANCE</h1>
+        <div class="hero-buttons">
+          <button class="btn btn-primary">SHOP RETAIL</button>
+          <button class="btn btn-secondary">EXPLORE WHOLESALE</button>
         </div>
+      </div>
     </section>
 
     <!-- Featured Products Section -->
     <section class="products-section">
-        <div class="products-container">
-            <div class="product-card">
-                <div class="product-image new-arrivals"></div>
-                <h3>NEW ARRIVALS</h3>
-                <p>Explore our latest collection</p>
-            </div>
-            <div class="product-card">
-                <div class="product-image best-sellers"></div>
-                <h3>BEST SELLERS</h3>
-                <p>Most loved pieces</p>
-            </div>
-            <div class="product-card">
-                <div class="product-image unique-collections"></div>
-                <h3>UNIQUE COLLECTIONS</h3>
-                <p>Exclusive designs</p>
-            </div>
-        </div>
+      <div class="products-container">
+        <a class="product-card" href="new-arrivals.html">
+          <div class="product-image new-arrivals"></div>
+          <h3>NEW ARRIVALS</h3>
+          <p>Explore our latest collection</p>
+        </a>
+        <a class="product-card" href="best-sellers.html">
+          <div class="product-image best-sellers"></div>
+          <h3>BEST SELLERS</h3>
+          <p>Most loved pieces</p>
+        </a>
+        <a class="product-card" href="unique-collections.html">
+          <div class="product-image unique-collections"></div>
+          <h3>UNIQUE COLLECTIONS</h3>
+          <p>Exclusive designs</p>
+        </a>
+      </div>
     </section>
 
     <!-- Tagline Section -->
     <section class="tagline-section">
-        <h2>ETHICAL BEAUTY & CRAFTSMANSHIP</h2>
-        <p>Responsibly sourced materials and expert craftsmanship in every piece</p>
+      <h2>ETHICAL BEAUTY & CRAFTSMANSHIP</h2>
+      <p>
+        Responsibly sourced materials and expert craftsmanship in every piece
+      </p>
     </section>
 
     <!-- About Section -->
     <section class="about-section">
-        <div class="about-content">
-            <h2>ETHICAL BEAUTY</h2>
-            <p>We are dedicated to creating exquisite jewelry that reflects our commitment to ethical sourcing and timeless elegance. Each piece is carefully crafted with attention to detail and quality.</p>
-            <p>Discover jewelry that tells a story of beauty, sustainability, and craftsmanship.</p>
-        </div>
+      <div class="about-content">
+        <h2>ETHICAL BEAUTY</h2>
+        <p>
+          We are dedicated to creating exquisite jewelry that reflects our
+          commitment to ethical sourcing and timeless elegance. Each piece is
+          carefully crafted with attention to detail and quality.
+        </p>
+        <p>
+          Discover jewelry that tells a story of beauty, sustainability, and
+          craftsmanship.
+        </p>
+      </div>
     </section>
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-links">
-                <a href="#about">About Us</a>
-                <a href="#contact">Contact</a>
-                <a href="#faq">FAQ</a>
-                <a href="#shipping">Shipping & Returns</a>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2024 Soumis Gems. All rights reserved.</p>
-            </div>
+      <div class="footer-content">
+        <div class="footer-links">
+          <a href="#about">About Us</a>
+          <a href="#contact">Contact</a>
+          <a href="#faq">FAQ</a>
+          <a href="#shipping">Shipping & Returns</a>
         </div>
+        <div class="footer-bottom">
+          <p>&copy; 2024 Soumis Gems. All rights reserved.</p>
+        </div>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
